# agent-nebula

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md
.github/workflows/: ci.yml
backend/: CLAUDE.md  avatars.py  config.py  conftest.py  database.py  main.py  pyproject.toml  ruff.toml
backend/models/: __init__.py  agent.py  message.py  room.py  room_agent.py
backend/routers/: __init__.py  agents.py  avatars.py  messages.py  rooms.py  simulation.py  ws.py
backend/schemas/: __init__.py  agent.py  message.py  room.py  simulation.py
backend/services/: __init__.py  agent_service.py  message_service.py  room_service.py  simulation_engine.py
backend/tests/: test_agent_service.py  test_api_agents.py  test_api_messages.py  test_api_rooms.py  test_api_simulation.py  test_database.py  test_message_service.py  test_models.py  test_room_service.py  test_schemas.py  test_simulation_engine.py
frontend/: CLAUDE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
frontend/src/__tests__/: ErrorBoundary.test.tsx  apiClient.test.ts  apiModules.test.ts  components.test.tsx  identicon.test.ts  simulationStore.test.ts  types.test.ts
frontend/src/api/: agents.ts  client.ts  messages.ts  rooms.ts  simulation.ts
frontend/src/avatars/: index.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: AgentsPage.tsx  ConversationPage.tsx  RoomDetailPage.tsx  RoomsPage.tsx
scripts/: optimize-favicon.js  package-lock.json  seed.py
(+27 files in other folders)
